hphp/hack/test/typecheck/new_inference/make_inv_then_invoke.php.exp
File "make_inv_then_invoke.php", line 13, characters 10-20:
  There are remaining unsolved constraints!: (T <: #0 && #0 <: T)
File "make_inv_then_invoke.php", line 23, characters 13-15:
You are trying to access the member foo on a value whose class is unknown (Typing[4296])
File "make_inv_then_invoke.php", line 21, characters 8-15:
It is unknown because a type could not be determined here
File "make_inv_then_invoke.php", line 12, characters 33-33:
  via this generic T
File "make_inv_then_invoke.php", line 9, characters 38-41:
  via this generic Tinv
